--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cn.myqrcode</groupId>
-	<artifactId>server</artifactId>
+	<artifactId>myqrcode</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
