--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,4 +15,9 @@
 # liquebase
 #spring.liquibase.change-log = classpath:/db/changelog/db.changelog-master.xml
 
-server.port=80
+# server.port=80
+
+server.port = 443
+server.ssl.key-store = classpath:cert/1829649_www.myqrcode.cn.pfx
+server.ssl.key-store-password = Ij2xeqfD
+server.ssl.keyStoreType = PKCS12
