--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,3 +21,9 @@ server.port = 443
 server.ssl.key-store = classpath:cert/1829649_www.myqrcode.cn.pfx
 server.ssl.key-store-password = Ij2xeqfD
 server.ssl.keyStoreType = PKCS12
+
+server.tomcat.uri-encoding = UTF-8
+server.tomcat.compression = on
+server.compression.enabled = true
+server.compression.mime-types = application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css,image/jpg,image/png,image/gif
+
